// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dev > fixture dev-entries > dist/cli.cjs 1`] = `
require("../node_modules/.pnpm/tsm@2.3.0/node_modules/tsm/require.js");

module.exports = require("../fixtures/dev-entries/src/entries/cli.ts");
`;

exports[`dev > fixture dev-entries > dist/cli.d.ts 1`] = `export * from "../src/entries/cli";`;

exports[`dev > fixture dev-entries > dist/cli.mjs 1`] = `
import { createRequire } from "module";

const require = createRequire(import.meta.url);

require("../node_modules/.pnpm/tsm@2.3.0/node_modules/tsm/require.js");

export {}
`;

exports[`dev > fixture dev-entries > dist/index.cjs 1`] = `
require("../node_modules/.pnpm/tsm@2.3.0/node_modules/tsm/require.js");

module.exports = require("../fixtures/dev-entries/src/index.ts");
`;

exports[`dev > fixture dev-entries > dist/index.d.ts 1`] = `
export * from "../src/index";
export { default } from "../src/index";
`;

exports[`dev > fixture dev-entries > dist/index.mjs 1`] = `
import { createRequire } from "module";

const require = createRequire(import.meta.url);

require("../node_modules/.pnpm/tsm@2.3.0/node_modules/tsm/require.js");

const _mod = require("../fixtures/dev-entries/src/index.ts");

export const something = _mod.something;
export default _mod.default;
`;
